# gainable-en-fabrication

./: .gitignore  CMakeLists.txt  Chauffage.cpp  Chauffage.hpp  DS18B20.cpp  DS18B20.hpp  Ds18b20.h  Froid.cpp  Froid.hpp  Logger.cpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow_Connections.cpp  MainWindow_Gifs.cpp  MainWindow_News.cpp  MainWindow_PacControl.cpp  MainWindow_Temperature.cpp  PacController.cpp  PacController.hpp  Relay.cpp  Relay.h  Relay.hpp  SwitchSensor.cpp  Temporisations.cpp  Trace.h  affichecons.cpp  affichecons.h  appwindow.cpp  chauffage.cpp  chauffage.h  consignes.cpp  consignes.h  ds18b20.cpp  ds18b20.h  froid.cpp  froid.h  gpioPin.cpp  gpioPin.hpp  main.cpp  (+14 more)
config/: .configNTC.ini.swp  configNTC.ini  consignes.ini  log4cxx.properties  temporisations.ini
src/: CMakeLists.txt  main.cpp
src/Qt/: AfficheCons.cpp  AfficheCons.hpp  AppWindow.cpp  AppWindow.hpp  DateTime.cpp  DateTime.hpp  Gifs.cpp  Gifs.hpp  MainWindow.cpp  MainWindow.hpp  ModifCons.cpp  ModifCons.hpp  NewsBanner.cpp  NewsBanner.hpp  PacControl.cpp  PacControl.hpp  Photos.cpp  Photos.hpp  RemoteCommandServer.cpp  RemoteCommandServer.hpp  ServiceTest.cpp  ServiceTest.hpp  TemperatureWidget.cpp  TemperatureWidget.hpp  WeatherManager.cpp  WeatherManager.hpp  WeatherWidget.cpp  WeatherWidget.hpp
src/core/: FiltreManager.cpp  FiltreManager.hpp  NTCManager.cpp  NTCManager.hpp  PacController.cpp  PacController.hpp  PacStatusService.cpp  PacStatusService.hpp  PacStatusUI.cpp  PacStatusUI.hpp
src/hardware/: Chauffage.cpp  Chauffage.hpp  Froid.cpp  Froid.hpp  Input.cpp  Input.hpp  NTCReader.cpp  NTCReader.hpp  Output.cpp  Output.hpp  RelayManager.cpp  RelayManager.hpp  SwitchManager.cpp  SwitchManager.hpp  SwitchSensor.hpp  VentilateurExterieur.cpp  VentilateurExterieur.hpp  VentilateurInterieur.cpp  VentilateurInterieur.hpp
src/logic/: Consignes.cpp  Consignes.hpp  Temporisations.cpp  Temporisations.hpp
src/ui/: AfficheCons.cpp  AppWindow.cpp  DateTime.cpp  Gifs.cpp  Gifs.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow_Connections.cpp  MainWindow_DateTime.cpp  MainWindow_Photos.cpp  MainWindow_Temperature.cpp  ModifCons.cpp  ModifCons.hpp  NewsBanner.cpp  NewsBanner.hpp  PacControl.cpp  Photos.cpp  TemperatureWidget.cpp  affichecons.hpp  appwindow.cpp  appwindow.hpp  modifcons.cpp
src/utils/: Log.hpp  Logger.hpp
